--- a/public/monster-admin/monster-html/index.hbs
+++ b/public/monster-admin/monster-html/index.hbs
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	{{setVar "host" "http://localhost:3000"}}
+
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords"
@@ -14,7 +16,7 @@
     <title>Monster Lite Template by WrapPixel</title>
     <link rel="canonical" href="https://www.wrappixel.com/templates/monster-admin-lite/" />
     <link rel="icon" type="image/png" sizes="16x16" href="monster-admin/assets/images/favicon.png">
-    <link href="monster-admin/assets/plugins/chartist/dist/chartist.min.css" rel="stylesheet">
+    <link href="./monster-admin/assets/plugins/chartist/dist/chartist.min.css" rel="stylesheet">
     <link href="monster-admin/monster-html/css/style.min.css" rel="stylesheet">
    
 </head>
@@ -108,16 +110,9 @@
                     </div>
                 </div>
             </div>
-            <!-- ============================================================== -->
-            <!-- End Bread crumb and right sidebar toggle -->
-            <!-- ============================================================== -->
-            <!-- ============================================================== -->
-            <!-- Container fluid  -->
-            <!-- ============================================================== -->
+  
             <div class="container-fluid">
-                <!-- ============================================================== -->
-                <!-- Sales chart -->
-                <!-- ============================================================== -->
+              
                 <div class="row">
                     <!-- Column -->
                     <div class="col-sm-6">
@@ -280,7 +275,7 @@
                     <!-- Column -->
                     <div class="col-lg-4 col-md-6">
                         <div class="card">
-                            <img class="card-img-top img-responsive" src="monster-admin/assets/images/big/img1.jpg" alt="Card">
+                            <img class="card-img-top img-responsive" src="{{src}}/monster-admin/assets/images/big/img1.jpg" alt="Card">
                             <div class="card-body">
                                 <ul class="list-inline d-flex align-items-center">
                                     <li class="ps-0">20 May 2021</li>
@@ -314,7 +309,7 @@
                                     <li class="ps-0">20 May 2021</li>
                                     <li class="ms-auto"><a href="javascript:void(0)" class="link">3 Comment</a></li>
                                 </ul>
-                                <h3 class="font-normal">Featured Hydroflora Pots Garden &amp; Outdoors</h3>
+                                <h3 class="font-normal">{{dt}} &amp; Outdoors</h3>
                             </div>
                         </div>
                     </div>
